[gd_scene load_steps=4 format=2]

[ext_resource path="res://interface/world/world.gd" type="Script" id=1]
[ext_resource path="res://interface/Title.tscn" type="PackedScene" id=2]
[ext_resource path="res://interface/fonts/montserrat_eb_64.tres" type="DynamicFont" id=3]

[node name="world" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Container" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 25.0
margin_top = 25.0
margin_right = -25.0
margin_bottom = -25.0
custom_constants/separation = 50

[node name="Title" parent="Container" instance=ExtResource( 2 )]
text = "CHOOSE WORLD"

[node name="VBoxContainer2" type="VBoxContainer" parent="Container"]
margin_top = 207.0
margin_right = 1870.0
margin_bottom = 492.0
custom_constants/separation = 15

[node name="HBoxContainer" type="HBoxContainer" parent="Container/VBoxContainer2"]
margin_right = 1870.0
margin_bottom = 85.0
alignment = 1

[node name="World1" type="Button" parent="Container/VBoxContainer2/HBoxContainer"]
margin_left = 83.0
margin_right = 409.0
margin_bottom = 85.0
custom_fonts/font = ExtResource( 3 )
text = "WORLD 1"

[node name="World2" type="Button" parent="Container/VBoxContainer2/HBoxContainer"]
margin_left = 413.0
margin_right = 751.0
margin_bottom = 85.0
custom_fonts/font = ExtResource( 3 )
text = "WORLD 2"

[node name="World3" type="Button" parent="Container/VBoxContainer2/HBoxContainer"]
margin_left = 755.0
margin_right = 1094.0
margin_bottom = 85.0
custom_fonts/font = ExtResource( 3 )
text = "WORLD 3"

[node name="World4" type="Button" parent="Container/VBoxContainer2/HBoxContainer"]
margin_left = 1098.0
margin_right = 1443.0
margin_bottom = 85.0
custom_fonts/font = ExtResource( 3 )
text = "WORLD 4"

[node name="World5" type="Button" parent="Container/VBoxContainer2/HBoxContainer"]
margin_left = 1447.0
margin_right = 1786.0
margin_bottom = 85.0
custom_fonts/font = ExtResource( 3 )
text = "WORLD 5"

[node name="HBoxContainer2" type="HBoxContainer" parent="Container/VBoxContainer2"]
margin_top = 100.0
margin_right = 1870.0
margin_bottom = 185.0
alignment = 1

[node name="World6" type="Button" parent="Container/VBoxContainer2/HBoxContainer2"]
margin_left = 638.0
margin_right = 1232.0
margin_bottom = 85.0
custom_fonts/font = ExtResource( 3 )
text = "CUSTOM WORLD"

[node name="BackButton" type="Button" parent="Container/VBoxContainer2"]
margin_left = 832.0
margin_top = 200.0
margin_right = 1038.0
margin_bottom = 285.0
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 3 )
text = "BACK"
[connection signal="pressed" from="Container/VBoxContainer2/HBoxContainer/World1" to="." method="_on_World1_pressed"]
[connection signal="pressed" from="Container/VBoxContainer2/HBoxContainer/World2" to="." method="_on_World2_pressed"]
[connection signal="pressed" from="Container/VBoxContainer2/HBoxContainer/World3" to="." method="_on_World3_pressed"]
[connection signal="pressed" from="Container/VBoxContainer2/HBoxContainer/World4" to="." method="_on_World4_pressed"]
[connection signal="pressed" from="Container/VBoxContainer2/HBoxContainer/World5" to="." method="_on_World5_pressed"]
[connection signal="pressed" from="Container/VBoxContainer2/HBoxContainer2/World6" to="." method="_on_World6_pressed"]
[connection signal="pressed" from="Container/VBoxContainer2/BackButton" to="." method="_on_BackButton_pressed"]
